Add accordian and footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,46 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Accordian from "../components/Accordian";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
-    <div class="container">
-      <div class="prose">
-        <h1 class="text-white heading">React Design Patterns</h1>
+  <main class="flex justify-center">
+    <div class="container max-w-3xl">
+      <div class="prose lg:prose-lg">
+        <h1 class="text-white">React Design Patterns</h1>
+        <p>
+          This is a collection of design patterns for React developers. It's a
+          living document that will be updated as new patterns emerge.
+        </p>
+        <h2>Lorem incoming</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+          molestiae delectus qui provident sapiente quam amet ullam facilis iste
+          quod quae voluptatem quidem, expedita eum, excepturi quibusdam a
+          asperiores temporibus. Optio, dolorum accusantium aliquid voluptates
+          sunt nesciunt reiciendis natus tenetur voluptatibus esse facere? Ad
+          facilis magnam, debitis autem sit est quo atque. Laudantium nesciunt
+          veritatis dolores quaerat tempore tempora vitae. Animi amet maiores,
+          dolores numquam quidem iste laudantium repellendus magnam itaque
+          consequuntur tempore quam praesentium fugit dolorum voluptatum
+          molestias tenetur autem neque, molestiae vitae soluta deserunt dolor!
+          Saepe, autem optio. Quae voluptate eos minus accusamus nesciunt enim
+          iure quaerat consectetur voluptatibus sed inventore, ipsum quasi
+          labore deleniti pariatur? Nisi neque, tenetur reprehenderit ducimus
+          laboriosam aperiam totam eius autem ratione commodi. Iste tempore
+          libero ipsam inventore accusantium dolor maiores dolore? Praesentium
+          delectus distinctio laborum incidunt saepe eius minima at adipisci
+          doloribus alias nesciunt rem provident repudiandae atque velit, itaque
+          officia? Qui. Ex eos aliquam quo similique soluta minima repellat
+          eaque ipsa cumque sed dicta architecto enim culpa veniam sunt,
+          blanditiis tempore quasi veritatis illo necessitatibus possimus
+          doloribus odit iste aperiam. A. Blanditiis aliquam asperiores, ullam
+          eos possimus aliquid quod dolor tenetur tempore ad quia nemo, velit
+          voluptatem aperiam, eius reprehenderit optio. Ab esse veniam
+          praesentium unde exercitationem deserunt iusto perferendis repellat.
+        </p>
+        <h2>Expand these</h2>
+        <Accordian />
       </div>
     </div>
   </main>
