--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Navbar from "../components/Navbar";
+import Footer from "../components/Footer";
+
 interface Props {
   title: string;
 }
@@ -8,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -19,6 +21,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <Navbar client:load />
-    <slot />
+    <slot class="mb-14" />
+    <Footer client:load />
   </body>
 </html>
