--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from "../components/Navbar";
 import Footer from "../components/Footer";
+import "../styles/globals.css";
 
 interface Props {
   title: string;
@@ -19,9 +20,9 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="grid grid-rows-[auto_1fr_auto] min-h-screen bg-green-100">
     <Navbar client:load />
-    <slot class="mb-14" />
+    <slot />
     <Footer client:load />
   </body>
 </html>
